  reference_catalog instead of normal catalog to fetch the objects. This
  improves perfomance when used together with LDAP. Also improved perfomance
  of writing to postgres db by executing and commiting insert statements in
  batches of 1000. Cleaned up and removed old unused code.
  [jcerjak]
- #7716 comment notifications: add upgrade step to migrate
  p.a.discussion items [deroiste]
- Added Products.LoginLockout and Products.PasswordStrength to requirements.
  #7594, #7595 [regebro]


1.4.27 (2013-07-23)
-------------------

- rewrote search_solr to only operate on the actual result set. So if you only
  search for 10 items, you get them really quick. If you search for 100000, it
    will still be slow. (pilz)


1.4.26 (2013-07-15)
-------------------

- Don't set 'rows' or 'start' in the SOLR fallback search if they
  already exist. [regebro]


1.4.25 (2013-06-28)
-------------------

- Use searchResults() not search() in the language fallback, to make sure
  permissions are considered [pysailor]


1.4.24 (2013-06-27)
-------------------

- remove dependency on osha.applicaitonform, dammit [pysailor]

1.4.23 (2013-06-26)
-------------------

- Fixed #7855 by making the fallback also ignore TypeErrors + not do
  the fallback think for resolveuid calls. [regebro]
- Added a shortcut for the solr language fall back search, when 
  search results are empty. [regebro]
- Made blog migration more robust [pysailor]
- Allow PressRelease in Collage in cleanup_content too #7803 [pysailor]


1.4.22 (2013-06-24)
-------------------

- Language fallback #7734
  [lregebro, reinhard, pysailor]
- Added ellipsis for teasers on homepage #7602 [deroiste]
- Comment out handle_object_willbe_translated, since we don't have LinguaLinks any more
  [pysailor]
- add collective.portlet.twitter to dependencies, refs #7781 [jure]


1.4.21 (2013-05-28)
-------------------

- #7648 Link checker: replace collective.lead with sqlalchemy for
   updating the postgres db [deroiste, pilz]

