@@ -153,5 +153,14 @@
         handler=".upgrades.migrate_comments"
         />
 
+    <genericsetup:upgradeStep
+        source="8"
+        destination="9"
+        title="Security update"
+        description="Install password policy and failed login attempt lockout"
+        profile="osha.policy:default"
+        handler=".upgrades.security_update"
+        />
+
 </configure>
 
