@@ -440,3 +440,18 @@ def migrate_comments(context):
     if not test:
         transaction.commit() # pragma: no cover
     return '\n'.join(out)
+
+
+def security_update(context):
+    qi = api.portal.get_tool("portal_quickinstaller")
+    
+    for product in ("LoginLockout", "PasswordStrength"):
+        if not qi.isProductInstalled(product):
+            logger.info("Installing Products.%s" % product)
+            qi.installProduct(product)
+
+    au = api.portal.get_tool("acl_users")
+    ps_plugin = au.password_strength_plugin
+    ps_plugin.manage_changeProperties(p1_re=".{8}.*", p1_err="Minimum 8 characters.")
+            
+    logger.info("PasswordStrength configured.")
